Header stays on top

--- a/records/2.0/index.html
+++ b/records/2.0/index.html
@@ -42,6 +42,441 @@
                 <div class="record-artist">Artist Name 2</div>
             </div>
         </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
+        <div class="record">
+            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 1</div>
+                <div class="record-artist">Artist Name 1</div>
+            </div>
+        </div>
+
+        <div class="record">
+            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <div class="record-info">
+                <div class="record-title">Vinyl Record Title 2</div>
+                <div class="record-artist">Artist Name 2</div>
+            </div>
+        </div>
         
 
         <!-- Add more placeholder records here -->
