--- a/records/2.0/index.html
+++ b/records/2.0/index.html
@@ -28,7 +28,7 @@
     <div id="results-container">
         <!-- Placeholder records -->
         <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
+            <img src="assets/logo.gif" alt="Vinyl Record">
             <div class="record-info">
                 <div class="record-title">Vinyl Record Title 1</div>
                 <div class="record-artist">Artist Name 1</div>
@@ -36,446 +36,10 @@
         </div>
 
         <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
+            <img src="assets/logo.gif" alt="Vinyl Record">
             <div class="record-info">
                 <div class="record-title">Vinyl Record Title 2</div>
                 <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
-        </div>
-        <div class="record">
-            <img src="placeholder-image1.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="placeholder-image2.jpg" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-            </div>
         </div>
         
 
