Scrolling on whole page

--- a/records/2.0/index.html
+++ b/records/2.0/index.html
@@ -25,27 +25,7 @@
         <input type="text" id="search-input" placeholder="Search vinyl records...">
     </div>
 
-    <div id="results-container">
-        <!-- Placeholder records -->
-        <div class="record">
-            <img src="assets/logo.gif" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 1</div>
-                <div class="record-artist">Artist Name 1</div>
-            </div>
-        </div>
-
-        <div class="record">
-            <img src="assets/logo.gif" alt="Vinyl Record">
-            <div class="record-info">
-                <div class="record-title">Vinyl Record Title 2</div>
-                <div class="record-artist">Artist Name 2</div>
-        </div>
-        
-
-        <!-- Add more placeholder records here -->
-
-    </div>
+    <div id="results-container"></div>
 
     <script type="text/javascript" importance="high" src="js/index.js">
     </script>
