--- a/records/index.html
+++ b/records/index.html
@@ -27,8 +27,7 @@
 
     <div id="results-container"></div>
 
-    <script type="text/javascript" importance="high" src="js/index.js">
-    </script>
+    <script type="text/javascript" importance="high" src="js/index.js"></script>
 </body>
 
 </html>
