--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 </div>
                                 <a href="./records/index.html" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">playlist_play</i>My Collection</a>
+                                        class="material-icons small">playlist_play</i>Demo</a>
                                 <a href="https://github.com/JAAKKQ/myVinylDB" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
