--- a/servers/index.html
+++ b/servers/index.html
@@ -71,7 +71,7 @@
             <ul class="menu">
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">Website</a></li>
                 <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net" target="_blank">Cloud</a></li>
-                <li class="menu-item" style="display:none"><a href="https://r3ne.net/records/" target="_blank">Records</a></li>
+                <li class="menu-item" style="display:none"><a href="https://cloud.r3ne.net/records/" target="_blank">Records</a></li>
                 <br><br>
                 <li class="menu-item"><a href="./index.html" style="font-size: 15px; display: contents;">Refresh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">VmWare</a></li>
