Random Record button

--- a/records/index.html
+++ b/records/index.html
@@ -25,6 +25,10 @@
         <input type="text" id="search-input" placeholder="Search vinyl records...">
     </div>
 
+    <div id="filter-buttons">
+        <button class="filter-button" onclick="randomRecord()">Random Record</button>
+    </div>
+
     <div id="results-container"></div>
 
     <script type="text/javascript" importance="high" src="js/index.js"></script>
