Genre Query Buttons

--- a/records/index.html
+++ b/records/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <div id="filter-buttons">
+        <button class="filter-button" onclick="searchRecords('')">All</button>
         <button class="filter-button" onclick="randomRecord()">Random Record</button>
+        <button class="filter-button" onclick="searchByGenre('pop')">POP</button>
     </div>
 
     <div id="results-container"></div>
