--- a/records/index.html
+++ b/records/index.html
@@ -29,6 +29,14 @@
         <button class="filter-button" onclick="searchRecords('')">All</button>
         <button class="filter-button" onclick="randomRecord()">Random Record</button>
         <button class="filter-button" onclick="searchByGenre('pop')">POP</button>
+        <button class="filter-button" onclick="searchByGenre('rock')">Rock</button>
+        <button class="filter-button" onclick="searchByGenre('Hip Hop')">Hip Hop</button>
+        <button class="filter-button" onclick="searchByGenre('Jazz')">Jazz</button>
+        <button class="filter-button" onclick="searchByGenre('Electronic')">Electronic</button>
+        <button class="filter-button" onclick="searchByGenre('Latin')">Latin</button>
+        <button class="filter-button" onclick="searchByGenre('Reggae')">Reggae</button>
+        <button class="filter-button" onclick="searchByGenre('pop')">Punk / Soul</button>
+        <button class="filter-button" onclick="searchByGenre('Folk, World, & Country')">Folk, World, & Country</button>
     </div>
 
     <div id="results-container"></div>
