--- a/records/index.html
+++ b/records/index.html
@@ -39,6 +39,9 @@
         <button class="filter-button" onclick="searchByGenre('Folk, World, & Country')">Folk, World, & Country</button>
     </div>
 
+    <div>
+        <p id="results-text"></p>
+    </div>
     <div id="results-container"></div>
 
     <script type="text/javascript" importance="high" src="js/index.js"></script>
