--- a/records/index.html
+++ b/records/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="assets/logo.gif">
     <link rel="apple-touch-icon" href="assets/logo.gif">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Records">
     <meta name="mobile-web-app-capable" content="yes">
     <title>Record Collection</title>
