--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                 <a href="./records/index.html" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">playlist_play</i>Demo</a>
-                                <a href="https://github.com/JAAKKQ/myVinylDB" target="_blank"
+                                <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
                             <li class="col-1-12">&nbsp;</li>
@@ -274,77 +274,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Coins 
-    <section data-name="GiveMeMoney" class="slide fade-6 kenBurns">
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-
-                    <div class="fix-10-12 toCenter">
-                        <h2 class="ae-1">Mmmmm... Moneyy...</h2>
-                        <p class="ae-2"><span class="opacity-8"></span></p>
-                    </div>
-
-                    <div class="fix-10-12">
-                        <ul class="grid grid-74 later equal margin-top-5">
-                            <li class="col-3-12 ae-5">
-                                <a class="box-74">
-                                    <div class="thumbnail-74">
-                                        <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
-                                    </div>
-                                    <div class="name-74 equalElement table wide">
-                                        <div class="cell center top">
-                                            <h3>₿itcoin</h3>
-                                            <textarea readonly>326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
-                                            <p class="tiny opacity-7 cropBottom">Copy the raw BTC address above^</p>
-                                            <p class="tiny opacity-7 cropBottom">or use the QR code.</p>
-                                        </div>
-                                    </div>
-                                    -->
-    <!--
-                                </a>
-                            </li>
-                            <li class="col-3-12 ae-5">
-                                <a class="box-74">
-                                    <div class="name-74 equalElement table wide">
-                                        <div class="cell center top">
-                                            <h3>₿itcoin</h3>
-                                            <div class="thumbnail-74">
-                                                <img src="assets/img/Bitcoin-QR.png" class="wide" alt="Thumbnail" />
-                                            </div>
-                                            <textarea readonly
-                                                style="resize: none">326vnwLjsjjjFHg56jHNEVCGGXGh2WQZUE</textarea>
-                                            <p class="tiny opacity-7 cropBottom">This is not a donation, it is a
-                                                contribution!</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="col-3-12 ae-5">
-                                <a class="box-74">
-                                    <div class="name-74 equalElement table wide">
-                                        <div class="cell center top">
-                                            <h3>Ξthereum</h3>
-                                            <div class="thumbnail-74">
-                                                <img src="assets/img/Ethereum-QR.png" class="wide" alt="Thumbnail" />
-                                            </div>
-                                            <textarea readonly
-                                                style="resize: none">0x7ff709898f402FF35079993B020974A1F7895999</textarea>
-                                            <p class="tiny opacity-7 cropBottom">This is not a donation, it is a
-                                                contribution!</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="background" style="background-image:url(assets/img/background/SendMoneyPLS.jpg)"></div>
-    </section>
--->
 
     <!-- End (#95) -->
     <section data-name="TheEnd" class="slide fade-6 kenBurns">
@@ -414,6 +343,8 @@ WDUC+QStJg==
 -----END PGP PUBLIC KEY BLOCK-----</textarea>
                         </p>
                     </div>
+                    <p class="hero ae-2"><span><a
+                        href="projects/index.html">Click for more Projects!</a></span></p>
                     <div class="fix-9-12">
                         <a href="https://www.linkedin.com/in/r3ne/" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/LI-Logo.png" height="50" /></a>
