--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="R3ne.net">
     <meta name="description"
         content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index">
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
     <!-- Page Title -->
