--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
     <title>R3ne's Project List</title>
+    <meta name="title" content="R3ne's Projects">
+    <meta name="description" content="Detailed documentations of my projects">
+    <meta name="robots" content="index">
+    <meta name="keywords" content="rene, r3ne, karkkainen" />
 </head>
 
 <header>
