--- a/records/index.html
+++ b/records/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/logo.gif">
     <link rel="apple-touch-icon" href="assets/logo.gif">
+    <meta name="robots" content="index, nofollow">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Records">
