--- a/projects/index.html
+++ b/projects/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="index.html">Projects</a>
         </li>
+        <li>
+            <a href="../records/index.html">Vinyl Records</a>
+        </li>
     </ul>
 </header>
 
