--- a/projects/open.html
+++ b/projects/open.html
@@ -18,6 +18,9 @@
         <li>
             <a href="index.html">Projects</a>
         </li>
+        <li>
+            <a href="../records/index.html">Vinyl Records</a>
+        </li>
     </ul>
 </header>
 
