--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1000; user-scalable=0;" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
     <title>R3ne's Project List</title>
@@ -13,7 +13,19 @@
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 </head>
 
-
+<header>
+    <ul class="nav-container">
+        <li>
+            <a href="../index.html">Home</a>
+        </li>
+        <li>
+            <a href="index.html">Projects</a>
+        </li>
+        <li>
+            <a href="../records/index.html">Vinyl Records</a>
+        </li>
+    </ul>
+</header>
 
 <body>
     <ul class="project-list">
