--- a/projects/index.html
+++ b/projects/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
     <title>R3ne's Project List</title>
