--- a/projects/open.html
+++ b/projects/open.html
@@ -25,23 +25,37 @@
 
     <div class="main-container">
         <a id="project-link" href="index.html">Projects > Project 1</a>
-        <div class="image-container">
-            <img class="main-image" id="mainImage" src="assets/img/logo.gif" alt="Product Image">
-            <div id="thumbnails">
+        <div class="flex-container">
+            <div class="content">
+                <div class="image-container">
+                    <img class="main-image" id="mainImage" src="assets/img/logo.gif" alt="Product Image">
+                    <div id="thumbnails">
+                    </div>
+                </div>
+                <div class="content-container">
+                    <div class="gallery"></div>
+                    <div class="description-container">
+                        <h1 id="subject"></h1>
+                        <h3 id="description"></h3>
+                    </div>
+                    <div id="markdown-container"></div>
+                </div>
+                <div class="metadata-container">
+                    <div class="link-container"></div>
+                    <div class="tags-container"></div>
+                </div>
             </div>
-        </div>
-        <div class="content-container">
-            <div class="gallery"></div>
-            <div class="description-container">
-                <h1 id="subject"></h1>
-                <h3 id="description"></h3>
+            <div class="info">
+                <h2>Links</h2>
+                <div class="links">
+                    <div>None</div>
+                </div>
+                <h2>Tags</h2>
+                <div class="tags">
+                    <div>None</div>
+                </div>
             </div>
-            <div id="markdown-container"></div>
-        </div>
-        <div class="metadata-container">
-            <div class="link-container"></div>
-            <div class="tags-container"></div>
-        </div>
+            </div>
     </div>
 
     <script src="js/open.js"></script>
