--- a/projects/open.html
+++ b/projects/open.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/img/pepe.jpeg" type="image/gif" sizes="16x16">
     <script src="https://cdn.jsdelivr.net/npm/marked@2.1.3/marked.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="open.css">
     <title>R3ne's Project List</title>
 </head>
@@ -48,11 +49,9 @@
             <div class="info">
                 <h2>Links</h2>
                 <div class="links">
-                    <div>None</div>
                 </div>
                 <h2>Tags</h2>
                 <div class="tags">
-                    <div>None</div>
                 </div>
             </div>
             </div>
