--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
                                 <a href="https://github.com/JAAKKQ/Vinyl-Manager/" target="_blank"
                                     class="button blue gradient cropBottom ae-7 fromCenter"><i
                                         class="material-icons small">cloud_download</i>Source</a>
+                                <a href="projects/open.html?project=Vinyl-Manager" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">open_in_new</i>Learn More</a>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
                                 <img src="assets/img/Screenshot-vinyldb-console.png" data-action="zoom"
@@ -281,9 +284,9 @@
             <div class="container">
                 <div class="wrap">
                     <div class="fix-9-12">
-                        <p class="hero ae-2"><span><a
-                                    href="mailto:mail@r3ne.net">karkkainen@r3ne.net</a></span></p>
-                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: a79e c442 3121 bf62 4a18 ea5d 5ab6 a533 40d3 b4fc</p>
+                        <p class="hero ae-2"><span><a href="mailto:mail@r3ne.net">karkkainen@r3ne.net</a></span></p>
+                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: a79e c442 3121 bf62 4a18 ea5d
+                            5ab6 a533 40d3 b4fc</p>
                         <p class="hero ae-2">
                             <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
@@ -343,8 +346,7 @@ WDUC+QStJg==
 -----END PGP PUBLIC KEY BLOCK-----</textarea>
                         </p>
                     </div>
-                    <p class="hero ae-2"><span><a
-                        href="projects/index.html">Click for more Projects!</a></span></p>
+                    <p class="hero ae-2"><span><a href="projects/index.html">Click for more Projects!</a></span></p>
                     <div class="fix-9-12">
                         <a href="https://www.linkedin.com/in/r3ne/" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/LI-Logo.png" height="50" /></a>
