--- a/projects/index.html
+++ b/projects/index.html
@@ -16,10 +16,7 @@
 <header>
     <ul class="nav-container">
         <li>
-            <a href="../index.html">Home</a>
-        </li>
-        <li>
-            <a href="index.html">Projects</a>
+            <a href="../index.html">R3NE.NET</a>
         </li>
         <li>
             <a href="../records/index.html">Vinyl Records</a>
