--- a/projects/open.html
+++ b/projects/open.html
@@ -14,10 +14,13 @@
 <header>
     <ul class="nav-container">
         <li>
-            <a href="../index.html">Home</a>
+            <a href="../index.html">R3NE.NET</a>
         </li>
         <li>
             <a href="index.html">Projects</a>
+        </li>
+        <li>
+            <a href="../records/index.html">Vinyl Records</a>
         </li>
     </ul>
 </header>
