--- a/index.html
+++ b/index.html
@@ -94,6 +94,30 @@
             </div>
         </div>
     </div>
+    <!-- Project -->
+    <section data-name="projects" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+                    <div class="fix-11-12">
+                        <ul class="flex reverse">
+                            <li class="col-6-30 left box-73">
+                                <h1 class="ae-2">Projects Site</h1>
+                                <p class="ae-3"><span class="opacity-8"></span>Created a simple documentation site so that I can explain some of my bigger projects in detail.
+                                </p>
+                                <a href="https://r3ne.net/projects/index.html" target="_blank"
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">open_in_new</i>Go to Projects Site</a>
+                            </li>
+                            <li class="col-6-12 right ae-1 fromAbove">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="background" style="background-image:url(assets/img/background/documentation.png)"></div>
+    </section>
     <!-- Discord Bot (#73) -->
     <section data-name="DiscordBot" class="slide fade-6 kenBurns">
         <div class="content">
