--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </div>
-    <!-- Project -->
+    <!-- Project 
     <section data-name="projects" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/documentation.png)"></div>
-    </section>
+    </section>-->
     <!-- Discord Bot (#73) -->
     <section data-name="DiscordBot" class="slide fade-6 kenBurns">
         <div class="content">
@@ -204,6 +204,39 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/be_bacground.png) "></div>
     </section>
+
+    <!-- PP-215 (#89) -->
+    <section data-name="JP-215" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+
+                    <div class="fix-12-12">
+                        <ul class="flex left">
+                            <li class="col-6-12 fromBottomLeft">
+                                <h1 class="ae-2">Converting PP-215 Flip Clock timer to 230v</h1>
+                                <div class="ae-3">
+                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to power up electronics (e.g. audio equipment) at the same time.</p>
+                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.</p>
+                                </div>
+                                <a href="projects/open.html?project=PP-215" target="_blank"
+                                class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                    class="material-icons small">open_in_new</i>Learn More</a>
+                            </li>
+                            <li class="col-1-12">&nbsp;</li>
+                            <li class="col-5-12 bottom">
+                                <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="background" style="background-image: url(assets/img/background/radios.jpg) "></div>
+    </section>
+
     <!--cipher
     <section data-name="cipher" class="slide fade-6 kenBurns">
         <div class="content">
