--- a/index.html
+++ b/index.html
@@ -75,49 +75,6 @@
         <div class="background" style="background-image: url(assets/img/background/hacker-background.gif)"></div>
     </section>
 
-
-    <!-- Popup Video -->
-    <div class="popup autoplay" data-popup-id="82-0">
-        <div class="close"><svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-            </svg></div>
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-10-12">
-                        <div class="embedVideo popupContent">
-                            <iframe src="#" frameborder="0" webkitallowfullscreen mozallowfullscreen
-                                allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Project 
-    <section data-name="projects" class="slide fade-6 kenBurns">
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-11-12">
-                        <ul class="flex reverse">
-                            <li class="col-6-30 left box-73">
-                                <h1 class="ae-2">Projects Site</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>Created a simple documentation site so that I can explain some of my bigger projects in detail.
-                                </p>
-                                <a href="https://r3ne.net/projects/index.html" target="_blank"
-                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                        class="material-icons small">open_in_new</i>Go to Projects Site</a>
-                            </li>
-                            <li class="col-6-12 right ae-1 fromAbove">
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="background" style="background-image:url(assets/img/background/documentation.png)"></div>
-    </section>-->
     <!-- Discord Bot (#73) -->
     <section data-name="DiscordBot" class="slide fade-6 kenBurns">
         <div class="content">
@@ -134,10 +91,11 @@
                             </script>
                             <li class="col-6-30 left box-73">
                                 <h1 class="ae-2">Cryptocurrency exchange for learning</h1>
-                                <p class="ae-3"><span class="opacity-8"></span>Cryptocurrency trading has become popular
-                                    due to the potential for high returns and control over financial future. However, it
-                                    can be risky. This Discord bot allows users to trade crypto without real money,
-                                    allowing them to gain experience and develop skills without risk.
+                                <p class="ae-3"><span class="opacity-8"></span>Created a cryptocurrency exchange where
+                                    user uses fake money to buy cryptocurrencies and learn about them. First
+                                    wrote in JavaScript, later wanted to learn Python so I
+                                    rewrote it in Python. The interface can be integrated easily to websites but I have
+                                    created a Discord bot to attract the younger people.
                                 </p>
                                 <p class="ae-4"><span id="BotDynDescription" class="opacity-8">Currently serving 0
                                         Discord servers with 0 users in total.</span></p>
@@ -184,8 +142,7 @@
                                         terrorists and counter-terrorists against each other. The terrorists' goal is to
                                         plant a bomb while the counter-terrorists' goal is to defuse it. Players can
                                         also win by eliminating all members of the opposing team.</p>
-                                    <p class="opacity-8">If you would like to try it, send me a email so I can give you
-                                        a key!</p>
+                                    <p class="opacity-8">Wanted to learn about Unreal Engine and making games in general.</p>
                                 </div>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
@@ -216,12 +173,15 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Converting PP-215 Flip Clock timer to 230v</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to power up electronics (e.g. audio equipment) at the same time.</p>
-                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.</p>
+                                    <p class="opacity-8">PP-215 is a beautiful 70s Japan Made flip clock timer used to
+                                        power up electronics (e.g. audio equipment) at the same time.</p>
+                                    <p class="opacity-8">In this project I will convert the Japan model to work on 230v
+                                        outlets using 3D printing, Arduino Nano, RTC module and a 28BYJ48 stepper motor.
+                                    </p>
                                 </div>
                                 <a href="projects/open.html?project=PP-215" target="_blank"
-                                class="button blue gradient cropBottom ae-7 fromCenter"><i
-                                    class="material-icons small">open_in_new</i>Learn More</a>
+                                    class="button blue gradient cropBottom ae-7 fromCenter"><i
+                                        class="material-icons small">open_in_new</i>Learn More</a>
                             </li>
                             <li class="col-1-12">&nbsp;</li>
                             <li class="col-5-12 bottom">
@@ -234,42 +194,8 @@
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image: url(assets/img/background/radios.jpg) "></div>
+        <div class="background" style="background-image: url(assets/img/background/vinyl-player.jpg) "></div>
     </section>
-
-    <!--cipher
-    <section data-name="cipher" class="slide fade-6 kenBurns">
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-
-                    <div class="fix-12-12">
-                        <ul class="flex left">
-                            <li class="col-6-12 fromBottomLeft">
-                                <h1 class="ae-2">Cipher</h1>
-                                <div class="ae-3">
-                                    <p class="opacity-8">Ladies and gentlemen, let me tell you, we have the best, the
-                                        most amazing, the most fantastic p2p communication web app out there, and it's
-                                        coming soon, believe me. Introducing Cipher, a secure p2p communication web app
-                                        coming soon. End-to-end encryption ensures that only the sender and recipient
-                                        can read messages. Stay tuned for the highly secure Cipher.
-                                    </p>
-                                </div>
-                            <li class="col-1-12">&nbsp;</li>
-                            <li class="col-4-12 bottom">
-                                <img src="assets/img/cipherSimple.png" data-action="zoom" class="shadow rounded ae-8"
-                                    alt="Image" />
-                            </li>
-                            </li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-        <div class="background" style="background-image: url(assets/img/background/cipher_background.gif) "></div>
-    </section>
--->
     <!--vinylDB-->
     <section data-name="vinylDB" class="slide fade-6 kenBurns">
         <div class="content">
