--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <h1 class="ae-2">Beryllium</h1>
                                 <div class="ae-3">
                                     <p class="opacity-8">Beryllium is a thrilling multiplayer game where players take on
-                                        the roles of opposing forces: one group aims to achieve certain objectives,
+                                        the roles of opposing forces. One group aims to achieve certain objectives,
                                         while the other works to prevent them. The objectives involve strategic actions
                                         like planting or defusing items, and success can also come from outmaneuvering
                                         the opposing team. The game offers an exciting mix of teamwork and strategy in a
