Flip Clock Image

--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
                             <li class="col-5-12 bottom">
                                 <img src="assets/img/pp-215.png" data-action="zoom" class="shadow rounded ae-8"
                                     alt="Image" />
+                                <img src="assets/img/flip-clock-open.png" data-action="zoom" class="shadow rounded ae-8"
+                                    alt="Image" />
                             </li>
                         </ul>
                     </div>
