--- a/projects/index.html
+++ b/projects/index.html
@@ -32,4 +32,8 @@
     <script src="js/index.js"></script>
 </body>
 
+<footer>
+    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for source code!</a>
+</footer>
+
 </html>
