--- a/projects/open.html
+++ b/projects/open.html
@@ -63,4 +63,8 @@
     <script src="js/open.js"></script>
 </body>
 
+<footer>
+    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for source code!</a>
+</footer>
+
 </html>
