--- a/test/index.html
+++ b/test/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
   <title>Document</title>
+  <style>
+    model-viewer {width: 800px; height: 600px; margin: auto;}
+  </style>
 </head>
 <body>
  <!-- Import the component -->
