--- a/projects/open.html
+++ b/projects/open.html
@@ -67,7 +67,7 @@
 </body>
 
 <footer>
-    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for source code!</a>
+    <a href="https://github.com/JAAKKQ/r3ne.net/tree/main/projects" target="_blank">Click here for site source code!</a>
 </footer>
 
 </html>
