--- a/index.html
+++ b/index.html
@@ -251,27 +251,8 @@
         </div>
         <div class="background" style="background-image: url(assets/img/background/dog-dj.gif) "></div>
     </section>
-    <!-- Popup Video -->
-    <div class="popup autoplay" data-popup-id="89-4">
-        <div class="close"><svg>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use>
-            </svg></div>
-        <div class="content">
-            <div class="container">
-                <div class="wrap">
-                    <div class="fix-10-12">
-                        <div class="embedVideo popupContent">
-                            <iframe src="https://www.youtube.com/watch?v=h7tvNC-D-04" frameborder="0"
-                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- End (#95) -->
-    <section data-name="TheEnd" class="slide fade-6 kenBurns">
+    <section data-name="contact" class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
